<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".presenter.policy.PolicyActivity">

    <include
        android:id="@+id/actionBar"
        layout="@layout/toolbar_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/privacy_detail"
        android:textColor="@color/color_FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/privacy_data_storage"
        android:textColor="@color/color_FFFFFF"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnServiceTerms"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/color_0086FF"
        android:fontFamily="@font/nanumsquarebold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/privacy_terms_service"
        android:textColor="@color/color_FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvDetail"
        app:strokeColor="@color/color_0086FF"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPersonalInformationCollection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color_0086FF"
        android:fontFamily="@font/nanumsquarebold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/privacy_personal_information_collection_usage_policy"
        android:textColor="@color/color_FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnServiceTerms"
        app:strokeColor="@color/color_0086FF"
        app:strokeWidth="1dp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbEssentialTermsService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:button="@drawable/selector_checkbox"
        android:buttonTintMode="add"
        android:text="@string/privacy_consent_list1"
        android:textColor="@color/color_FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPersonalInformationCollection" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbConsentUseAppData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:button="@drawable/selector_checkbox"
        android:buttonTintMode="add"
        android:text="@string/privacy_consent_list2"
        android:textColor="@color/color_FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbEssentialTermsService"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAgree"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/color_yellow"
        android:fontFamily="@font/nanumsquarebold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textColor="@color/color_000000"
        android:text="@string/privacy_agree"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>