<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="2"
        android:textColor="@color/color_FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:text="Title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_weight="5"
        android:lineSpacingExtra="2sp"
        android:paddingHorizontal="30dp"
        android:textAlignment="center"
        android:textColor="@color/color_FFFFFF"
        android:textSize="21sp"
        tools:text="@string/dialog_disconected_state_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2.1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_dialog_cancel"
            android:padding="20dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/color_FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_dialog_check"
            android:padding="20dp"
            android:text="@string/dialog_btn_confirm"
            android:textColor="@color/color_000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>