<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".presenter.main.breathing.BreathingFragment">


    <!-- 배터리 텍스트 -->


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_weight="7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/init_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="tv_name ,tv_name_des1 ,tv_name_des2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/nanumsquarebold"
                android:text="@string/client"
                android:textColor="@color/color_FFFFFF"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_des1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/nanumsquarebold"
                android:text="@string/sir"
                android:textColor="@color/color_FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="@+id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_des2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/nanumsquareregular"
                android:text="@string/breathing_start_info_message"
                android:textColor="@color/color_FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/tv_name_des1"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name_des1" />


            <include
                android:id="@+id/action_measurer"
                layout="@layout/breathing_measure"
                android:visibility="gone" />

            <include
                android:id="@+id/action_result"
                layout="@layout/breathing_sending_data"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/new_button"
        android:fontFamily="@font/nanumsquarebold"
        android:scaleType="centerCrop"
        android:text="@string/btn_start"
        android:textColor="@color/color_000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/new_button"
        android:fontFamily="@font/nanumsquarebold"
        android:text="@string/btn_end"
        android:textColor="@color/color_000000"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/battery_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/battery_back"
        android:drawableEnd="@drawable/new_ic_battery"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text=""
        android:textColor="@color/color_000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/battery_back"
        android:drawableEnd="@drawable/bluetooth_disabled"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/ble_disconnected"
        android:textColor="@color/color_000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/action_progress"
        layout="@layout/row_progress"
        android:visibility="gone" />

    <include
        android:id="@+id/action_progress_result"
        layout="@layout/row_progress_result"
        android:visibility="gone" />

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ic_ble_progress"
        layout="@layout/ble_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>