<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_progress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background"
    android:visibility="visible">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/guide_info_message1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/vp_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@id/cb_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_guide_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/vp_2"
        app:layout_constraintStart_toStartOf="@id/vp_2"
        app:layout_constraintTop_toTopOf="@id/vp_2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/vp_2"
        app:layout_constraintEnd_toEndOf="@id/vp_2"
        app:layout_constraintTop_toTopOf="@id/vp_2" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:button="@drawable/selector_checkbox"
        android:paddingHorizontal="20dp"
        android:text="@string/guide_info_message2"
        android:textColor="@color/color_FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/color_yellow"
        android:fontFamily="@font/nanumsquarebold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/privacy_agree"
        android:textColor="@color/color_000000"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>